option java_outer_classname = "LCVehiclePassInAreaDel";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message VehiclePassInAreaDel{
	repeated	int64	areaIdentifys  =1;
	optional	bool	saveSign       =2;

	
}